--- a/iq-3.2.html
+++ b/iq-3.2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3.2 Numerical Aptitude Test – 132 MCQs (Lok Sewa Nepal)</title>
+  <title>3.2 Numerical Aptitude Test – 99 MCQs (Lok Sewa Nepal)</title>
   <style>
     :root {
       --primary: #1e88e5;
@@ -151,13 +151,13 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h1>3.2 Numerical Aptitude Test – 132 MCQs (Lok Sewa Nepal)</h1>
+    <h1>3.2 Numerical Aptitude Test – 99 MCQs (Lok Sewa Nepal)</h1>
     <div id="quiz"></div>
   </div>
 
   <script>
     const questions = [
-      // Sequence (12 MCQs, 3 figure-based)
+      // Sequence (9 MCQs)
       {
         q: "What is the next number in the sequence: 3, 6, 12, 24, 48, __?",
         options: ["72", "96", "108", "120"],
@@ -177,12 +177,6 @@
         explanation: "Differences are 3, 6, 12, 21, increasing irregularly. Next difference approximates to 36, so 44 + 36 = 80."
       },
       {
-        q: "What is the next number: 100, 95, 85, 70, 50, __?",
-        options: ["20", "25", "30", "35"],
-        answer: 0,
-        explanation: "Differences increase by 5: 5, 10, 15, 20. Next is 25, so 50 - 25 = 25. Closest option is 20."
-      },
-      {
         q: "A sequence of triangles has vertices: 3, 3, 4, 4, 5, __. What is the next number of vertices?",
         options: ["5", "6", "7", "8"],
         answer: 1,
@@ -198,7 +192,7 @@
         q: "A sequence of squares has sides: 1, 2, 3, 4, __. What is the area of the next square?",
         options: ["16", "25", "36", "49"],
         answer: 1,
-        explanation: "Side among otherside increases by 1: 1, 2, 3, 4, 5. Area = 5² = 25."
+        explanation: "Side increases by 1: 1, 2, 3, 4, 5. Area = 5² = 25."
       },
       {
         q: "Next term: 7, 14, 28, 56, 112, __?",
@@ -207,22 +201,10 @@
         explanation: "Each term is doubled: 7×2=14, ..., 112×2=224."
       },
       {
-        q: "Find the next: 4, 8, 12, 16, 20, __?",
-        options: ["22", "24", "26", "28"],
-        answer: 2,
-        explanation: "Arithmetic sequence, increases by 4: 20 + 4 = 24."
-      },
-      {
         q: "What is the next number: 1, 4, 9, 16, 25, __?",
         options: ["30", "36", "42", "49"],
         answer: 1,
         explanation: "Perfect squares: 1², 2², 3², 4², 5², 6² = 36."
-      },
-      {
-        q: "Complete: 10, 20, 30, 40, 50, __?",
-        options: ["55", "60", "65", "70"],
-        answer: 1,
-        explanation: "Increases by 10: 50 + 10 = 60."
       },
       {
         q: "Next term: 2, 6, 18, 54, 162, __?",
@@ -231,7 +213,7 @@
         explanation: "Geometric sequence, multiply by 3: 162 × 3 = 486."
       },
 
-      // Analogy (12 MCQs, 3 figure-based)
+      // Analogy (9 MCQs)
       {
         q: "2 : 8 :: 3 : ?",
         options: ["12", "27", "18", "24"],
@@ -263,12 +245,6 @@
         explanation: "10 : 100 is 10² = 100. Similarly, 6² = 36."
       },
       {
-        q: "1 : 2 :: 4 : ?",
-        options: ["5", "8", "10", "12"],
-        answer: 1,
-        explanation: "1 : 2 is 1×2 = 2. Similarly, 4×2 = 8."
-      },
-      {
         q: "Small square (side 2) : area 4 :: Large square (side 3) : ?",
         options: ["6", "9", "12", "15"],
         answer: 1,
@@ -281,22 +257,10 @@
         explanation: "8 : 4 is 8 ÷ 2 = 4. Similarly, 18 ÷ 3 = 6."
       },
       {
-        q: "3 : 12 :: 5 : ?",
-        options: ["15", "20", "25", "30"],
-        answer: 1,
-        explanation: "3 : 12 is 3×4 = 12. Similarly, 5×4 = 20."
-      },
-      {
         q: "15 : 5 :: 24 : ?",
         options: ["6", "8", "10", "12"],
         answer: 1,
         explanation: "15 : 5 is 15 ÷ 3 = 5. Similarly, 24 ÷ 3 = 8."
-      },
-      {
-        q: "2 : 6 :: 4 : ?",
-        options: ["8", "12", "16", "20"],
-        answer: 1,
-        explanation: "2 : 6 is 2×3 = 6. Similarly, 4×3 = 12."
       },
       {
         q: "Rectangle (2×3) : area 6 :: Rectangle (3×4) : ?",
@@ -305,7 +269,7 @@
         explanation: "Area = length × width. 2×3 = 6. 3×4 = 12."
       },
 
-      // Classification (12 MCQs, 3 figure-based)
+      // Classification (9 MCQs)
       {
         q: "Which number does not belong: 9, 16, 25, 36, 42?",
         options: ["9", "16", "25", "42"],
@@ -343,10 +307,10 @@
         explanation: "1, 8, 27, 64 are perfect cubes (1³, 2³, 3³, 4³). 100 is not."
       },
       {
-        q: "Which is different: 5, 10, 15, 20, 22?",
-        options: ["5", "10", "20", "22"],
+        q: "Which is different: 4, 9, 16, 25, 30?",
+        options: ["4", "9", "25", "30"],
         answer: 3,
-        explanation: "5, 10, 15, 20 are multiples of 5. 22 is not."
+        explanation: "4, 9, 16, 25 are perfect squares. 30 is not."
       },
       {
         q: "Which shape does not belong: 3-sided triangle, 4-sided square, 5-sided pentagon, 6-sided hexagon, 4-sided rectangle?",
@@ -355,31 +319,13 @@
         explanation: "All have different side counts except square and rectangle (both 4 sides). Rectangle is similar to square, so it’s the odd one."
       },
       {
-        q: "Odd one out: 12, 24, 36, 48, 50?",
-        options: ["12", "24", "36", "50"],
-        answer: 3,
-        explanation: "12, 24, 36, 48 are multiples of 12. 50 is not."
-      },
-      {
-        q: "Which does not belong: 4, 9, 16, 25, 30?",
-        options: ["4", "9", "25", "30"],
-        answer: 3,
-        explanation: "4, 9, 16, 25 are perfect squares. 30 is not."
-      },
-      {
-        q: "Which is different: 7, 14, 21, 28, 32?",
-        options: ["7", "14", "28", "32"],
-        answer: 3,
-        explanation: "7, 14, 21, 28 are multiples of 7. 32 is not."
-      },
-      {
         q: "Odd one out: 6, 12, 18, 24, 25?",
         options: ["6", "12", "24", "25"],
         answer: 3,
         explanation: "6, 12, 18, 24 are multiples of 6. 25 is not."
       },
 
-      // Coding (12 MCQs)
+      // Coding (9 MCQs)
       {
         q: "If 123 = 456, what is 234?",
         options: ["567", "678", "789", "890"],
@@ -405,34 +351,16 @@
         explanation: "Letter positions: C=3, O=15, D=4, E=5. CODE=3154. DATA: D=4, A=1, T=20, A=1. Adjusted: 4125."
       },
       {
-        q: "If 111 = 444, what is 222?",
-        options: ["555", "666", "777", "888"],
-        answer: 0,
-        explanation: "Each digit increases by 3: 1+3=4. For 222: 2+3=5. So, 555."
-      },
-      {
         q: "If MATH = NZBU, what is TEST?",
         options: ["VFUV", "UFVU", "VFUU", "UFUV"],
         answer: 0,
         explanation: "Each letter increases by 1: M+1=N, A+1=B, etc. TEST: T+1=U, E+1=F, S+1=T, T+1=U. So, VFUV."
       },
       {
-        q: "If 543 = 210, what is 654?",
-        options: ["321", "432", "123", "543"],
-        answer: 0,
-        explanation: "Each digit decreases by 3: 5-3=2, 4-3=1, 3-3=0. For 654: 6-3=3, 5-3=2, 4-3=1. So, 321."
-      },
-      {
         q: "If ONE = 1514, what is TWO?",
         options: ["2015", "1520", "2014", "1420"],
         answer: 0,
         explanation: "Letter positions: O=15, N=14, E=5. ONE=1514. TWO: T=20, W=23, O=15. Adjusted: 2015."
-      },
-      {
-        q: "If 999 = 666, what is 777?",
-        options: ["444", "555", "333", "222"],
-        answer: 0,
-        explanation: "Each digit decreases by 3: 9-3=6. For 777: 7-3=4. So, 444."
       },
       {
         q: "If WORD = XPSF, what is PLAY?",
@@ -453,7 +381,7 @@
         explanation: "Each letter increases by 1: B+1=C, O+1=P, etc. PAGE: P+1=Q, A+1=B, G+1=H, E+1=F. Adjusted: QBHJ."
       },
 
-      // Matrix (12 MCQs, 4 figure-based)
+      // Matrix (9 MCQs)
       {
         q: "In a 3×3 grid: [1,2,3][4,5,6][7,8,?]. What is the missing number?",
         options: ["9", "10", "11", "12"],
@@ -485,34 +413,16 @@
         explanation: "Row-wise, increases by 2: 13,15,17."
       },
       {
-        q: "In a 2×2 matrix: [4,8][10,?]. If each row doubles the first element, what is the missing number?",
-        options: ["16", "18", "20", "22"],
-        answer: 2,
-        explanation: "1st row: 4×2=8. 2nd row: 10×2=20."
-      },
-      {
         q: "In a 3×3 grid: [2,4,6][8,10,12][14,16,?]. What is the missing number?",
         options: ["18", "20", "22", "24"],
         answer: 0,
         explanation: "Row-wise, increases by 2: 14,16,18."
       },
       {
-        q: "In a 2×2 matrix: [5,15][7,?]. If each row triples the first element, what is the missing number?",
-        options: ["18", "21", "24", "27"],
-        answer: 1,
-        explanation: "1st row: 5×3=15. 2nd row: 7×3=21."
-      },
-      {
         q: "In a 3×3 grid: [10,20,30][40,50,60][70,80,?]. What is the missing number?",
         options: ["90", "100", "110", "120"],
         answer: 0,
         explanation: "Row-wise, increases by 10: 70,80,90."
-      },
-      {
-        q: "In a 2×2 matrix: [1,2][3,?]. If each row doubles the first element, what is the missing number?",
-        options: ["4", "6", "8", "10"],
-        answer: 0,
-        explanation: "1st row: 1×2=2. 2nd row: 3×2=6."
       },
       {
         q: "In a 3×3 grid: [3,6,9][12,15,18][21,24,?]. What is the missing number?",
@@ -527,7 +437,7 @@
         explanation: "1st row: 8×3=24. 2nd row: 4×3=12."
       },
 
-      // Arithmetic Reasoning/Operations (12 MCQs)
+      // Arithmetic Reasoning (9 MCQs)
       {
         q: "If 2x + 3 = 15, what is x?",
         options: ["4", "5", "6", "7"],
@@ -547,22 +457,10 @@
         explanation: "Cost per pencil = 15 ÷ 5 = 3. For 3 pencils: 3×3 = 9."
       },
       {
-        q: "If x - 8 = 12, what is x?",
-        options: ["18", "19", "20", "21"],
-        answer: 2,
-        explanation: "x - 8 = 12 → x = 12 + 8 = 20."
-      },
-      {
         q: "A shop sells 6 apples for $12. How many apples can you buy for $18?",
         options: ["8", "9", "10", "11"],
         answer: 1,
         explanation: "Cost per apple = 12 ÷ 6 = 2. Apples for $18: 18 ÷ 2 = 9."
-      },
-      {
-        q: "If 4y = 24, what is y?",
-        options: ["4", "5", "6", "7"],
-        answer: 2,
-        explanation: "4y = 24 → y = 24 ÷ 4 = 6."
       },
       {
         q: "A train travels 150 km in 2 hours. What is its speed?",
@@ -583,12 +481,6 @@
         explanation: "Cost per book = 42 ÷ 7 = 6. For 2 books: 2×6 = 12."
       },
       {
-        q: "If 5x = 25, what is x?",
-        options: ["3", "4", "5", "6"],
-        answer: 2,
-        explanation: "5x = 25 → x = 25 ÷ 5 = 5."
-      },
-      {
         q: "A bicycle travels 60 km in 3 hours. What is its speed?",
         options: ["15 km/h", "20 km/h", "25 km/h", "30 km/h"],
         answer: 1,
@@ -598,10 +490,10 @@
         q: "If 2b + 4 = 10, what is b?",
         options: ["2", "3", "4", "5"],
         answer: 1,
-        explanation: "2b + 4 = 10 → 2b = 6 → b 5 km/h."
+        explanation: "2b + 4 = 10 → 2b = 6 → b = 3."
       },
 
-      // Percentage (12 MCQs)
+      // Percentage (9 MCQs)
       {
         q: "What is 20% of 150?",
         options: ["25", "30", "35", "40"],
@@ -639,10 +531,10 @@
         explanation: "Increase = 20% of 120 = 24. New price = 120 + 24 = 144."
       },
       {
-        q: "What is 15% of 60?",
-        options: ["7", "8", "9", "10"],
-        answer: 2,
-        explanation: "15% of 60 = (15/100)×60 = 9."
+        q: "A product’s price drops from $100 to $80. What is the percentage decrease?",
+        options: ["20%", "25%", "30%", "35%"],
+        answer: 0,
+        explanation: "Decrease = 100 - 80 = 20. Percentage = (20 ÷ 100) × 100 = 20%."
       },
       {
         q: "If 80% of a class of 25 students passed, how many passed?",
@@ -651,31 +543,13 @@
         explanation: "80% of 25 = (80/100)×25 = 20."
       },
       {
-        q: "A product’s price drops from $100 to $80. What is the percentage decrease?",
-        options: ["20%", "25%", "30%", "35%"],
-        answer: 0,
-        explanation: "Decrease = 100 - 80 = 20. Percentage = (20 ÷ 100) × 100 = 20%."
-      },
-      {
-        q: "If 70% of a number is 56, what is the number?",
-        options: ["70", "80", "90", "100"],
-        answer: 1,
-        explanation: "0.7x = 56 → x = 56 ÷ 0.7 = 80."
-      },
-      {
-        q: "What is 25% of 80?",
-        options: ["15", "20", "25", "30"],
-        answer: 1,
-        explanation: "25% of 80 = (25/100)×80 = 20."
-      },
-      {
         q: "A price of $50 is increased by 30%. What is the new price?",
         options: ["$60", "$65", "$70", "$75"],
         answer: 1,
         explanation: "Increase = 30% of 50 = 15. New price = 50 + 15 = 65."
       },
 
-      // Profit and Loss (12 MCQs)
+      // Profit and Loss (9 MCQs)
       {
         q: "A book is bought for $40 and sold for $50. What is the profit?",
         options: ["$8", "$10", "$12", "$14"],
@@ -713,22 +587,10 @@
         explanation: "SP = CP × 1.25. 120 = CP × 1.25 → CP = 120 ÷ 1.25 = 96."
       },
       {
-        q: "A chair is bought for $150 and sold for $120. What is the loss?",
-        options: ["$20", "$25", "$30", "$35"],
-        answer: 2,
-        explanation: "Loss = 150 - 120 = 30."
-      },
-      {
         q: "A product is sold for $80 at a 20% loss. What was the cost price?",
         options: ["$95", "$100", "$105", "$110"],
         answer: 1,
         explanation: "SP = CP × 0.8. 80 = CP × 0.8 → CP = 80 ÷ 0.8 = 100."
-      },
-      {
-        q: "A toy is bought for $20 and sold for $30. What is the profit percentage?",
-        options: ["40%", "50%", "60%", "70%"],
-        answer: 1,
-        explanation: "Profit = 30 - 20 = 10. Profit% = (10 ÷ 20) × 100 = 50%."
       },
       {
         q: "An item is sold for $75 at a 25% loss. What was the cost price?",
@@ -737,19 +599,13 @@
         explanation: "SP = CP × 0.75. 75 = CP × 0.75 → CP = 75 ÷ 0.75 = 100."
       },
       {
-        q: "A table is bought for $300 and sold for $360. What is the profit?",
-        options: ["$50", "$60", "$70", "$80"],
-        answer: 1,
-        explanation: "Profit = 360 - 300 = 60."
-      },
-      {
         q: "A laptop is sold for $500 at a 10% profit. What was the cost price?",
         options: ["$450", "$454", "$460", "$470"],
         answer: 0,
         explanation: "SP = CP × 1.1. 500 = CP × 1.1 → CP = 500 ÷ 1.1 ≈ 454. Closest is 450."
       },
 
-      // Ratio (12 MCQs)
+      // Ratio (9 MCQs)
       {
         q: "Divide $120 in the ratio 2:3. What is the smaller part?",
         options: ["$48", "$50", "$52", "$54"],
@@ -793,28 +649,10 @@
         explanation: "p/12 = 4/3 → p = (4×12)/3 = 16."
       },
       {
-        q: "Divide $90 in the ratio 2:3:4. What is the smallest part?",
-        options: ["$20", "$25", "$30", "$35"],
-        answer: 0,
-        explanation: "Parts = 2+3+4=9. Smallest = (2/9)×90 = 20."
-      },
-      {
-        q: "If m:n = 5:2 and m+n = 35, what is n?",
-        options: ["10", "12", "14", "16"],
-        answer: 0,
-        explanation: "m/n = 5/2. m = (5/2)n. m+n = (5/2)n + n = 35 → (7/2)n = 35 → n = 10."
-      },
-      {
         q: "The ratio of ages of A to B is 3:5. If B’s age is 20, what is A’s age?",
         options: ["10", "12", "15", "18"],
         answer: 2,
-        explanation: "A/B = 3/5. A/20 = 3/5 → A = (3×20)/ EPOCH → A = 12."
-      },
-      {
-        q: "Divide $150 in the ratio 1:2. What is the larger part?",
-        options: ["$90", "$100", "$110", "$120"],
-        answer: 0,
-        explanation: "Parts = 1+2=3. Larger = (2/3)×150 = 100."
+        explanation: "A/B = 3/5. A/20 = 3/5 → A = (3×20)/5 = 12."
       },
       {
         q: "If a:b = 2:3 and b:c = 4:5, what is a:c?",
@@ -823,7 +661,7 @@
         explanation: "a/b = 2/3, b/c = 4/5. a/c = (2/3)×(4/5) = 8/15."
       },
 
-      // Average (12 MCQs)
+      // Average (9 MCQs)
       {
         q: "Find the average of 10, 20, 30, 40, 50.",
         options: ["25", "30", "35", "40"],
@@ -849,22 +687,10 @@
         explanation: "Total = 20×6 = 120. Remaining = 120 - 26 = 94. Average = 94/5 = 18.8 ≈ 18."
       },
       {
-        q: "Find the average of 15, 25, 35.",
-        options: ["20", "25", "30", "35"],
-        answer: 1,
-        explanation: "(15+25+35)/3 = 75/3 = 25."
-      },
-      {
         q: "The average of 3 numbers is 18. If two are 16 and 20, what is the third?",
         options: ["16", "17", "18", "19"],
         answer: 2,
         explanation: "(16+20+x)/3 = 18 → 36+x = 54 → x = 18."
-      },
-      {
-        q: "The average of 10, 20, x, 40 is 25. What is x?",
-        options: ["20", "25", "30", "35"],
-        answer: 2,
-        explanation: "(10+20+x+40)/4 = 25 → 70+x = 100 → x = 30."
       },
       {
         q: "The average of 5 numbers is 50. If one is 60, what is the average of the rest?",
@@ -873,13 +699,7 @@
         explanation: "Total = 50×5 = 250. Remaining = 250 - 60 = 190. Average = 190/4 = 47.5 ≈ 48."
       },
       {
-        q: "Find the average of 5, 10, 15, 20.",
-        options: ["10", "12", "15", "18"],
-        answer: 2,
-        explanation: "(5+10+15+20)/4 = 60/4 = 15."
-      },
-      {
-        q: "If the average of 6 numbers is 30 and one is 24, what is the average of the remaining 5?",
+        q: "The average of 6 numbers is 30 and one is 24, what is the average of the remaining 5?",
         options: ["31", "32", "33", "34"],
         answer: 0,
         explanation: "Total = 30×6 = 180. Remaining = 180 - 24 = 156. Average = 156/5 = 31.2 ≈ 31."
@@ -897,7 +717,7 @@
         explanation: "(12+14+18+x)/4 = 16 → 44+x = 64 → x = 20."
       },
 
-      // Time and Work (12 MCQs)
+      // Time and Work (9 MCQs)
       {
         q: "A can complete a work in 10 days. How many days will it take if B, who works twice as fast, joins A?",
         options: ["3", "4", "5", "6"],
@@ -935,34 +755,16 @@
         explanation: "Rate per machine = 600 ÷ (3 × 5) = 40 units/hour. Total units = 800. Time = 4 hours. Machines = 800 ÷ (40 × 4) = 800 ÷ 160 = 5."
       },
       {
-        q: "A and B together can complete a task in 8 days. If A alone takes 12 days, how long does B take alone?",
-        options: ["20", "22", "24", "26"],
-        answer: 0,
-        explanation: "A’s rate = 1/12 job/day. Together: 1/8 job/day. B’s rate = 1/8 - 1/12 = 3/24 - 2/24 = 1/24 job/day. B alone: 24 days."
-      },
-      {
         q: "If 6 workers complete a project in 10 days, how long will 8 workers take?",
         options: ["6", "7", "8", "9"],
         answer: 1,
         explanation: "Total work = 6 × 10 = 60 worker-days. With 8 workers: 60 ÷ 8 = 7.5 ≈ 7 days."
       },
       {
-        q: "A can do a job in 30 days, B in 20 days, and C in 15 days. How long will they take together?",
-        options: ["6", "7", "8", "9"],
-        answer: 0,
-        explanation: "Rates: A = 1/30, B = 1/20, C = 1/15 job/day. Together: 1/30 + 1/20 + 1/15 = 2/60 + 3/60 + 4/60 = 9/60 = 3/20 job/day. Time = 20/3 ≈ 6.67 ≈ 6 days."
-      },
-      {
         q: "If 10 men can dig a trench in 4 days, how many men are needed to dig it in 2 days?",
         options: ["18", "20", "22", "24"],
         answer: 1,
         explanation: "Total work = 10 × 4 = 40 man-days. For 2 days: 40 ÷ 2 = 20 men."
-      },
-      {
-        q: "A and B can complete a job in 6 days. If A alone takes 10 days, how long does B take alone?",
-        options: ["12", "14", "15", "16"],
-        answer: 0,
-        explanation: "A’s rate = 1/10 job/day. Together: 1/6 job/day. B’s rate = 1/6 - 1/10 = 5/30 - 3/30 = 2/30 = 1/15 job/day. B alone: 15 days."
       },
       {
         q: "If 4 printers produce 800 pages in 5 hours, how many printers are needed to produce 1000 pages in 4 hours?",
